syntax = "proto3";

package log.v1;

option go_package = "github.com/breda/logly/api/logv1";

message Record {
    string data = 1;
    int64 id = 2;
}


// Service def
message AppendRequest {
    string data = 1;
}

message AppendResponse {
    Record record = 1;
}

message FetchRequest {
    int64 id = 1;
}

message FetchResponse {
    Record record = 1;
}

service Logly {
    rpc Append(AppendRequest) returns (AppendResponse) {}
    rpc Fetch (FetchRequest) returns (FetchResponse) {}

    rpc AppendStream(stream AppendRequest) returns (stream AppendResponse) {}
    rpc FetchStream(FetchRequest) returns (stream FetchResponse) {}
}
